# f1-fantasy-2026

./: .gitignore
.github/instructions/: copilot-instructions.md.instructions.md
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_core_tables.py
apps/api/app/: main.py
apps/api/app/api/: v1.py
apps/api/app/core/: config.py  errors.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  gameplay.py  reference.py  ruleset.py  simulation.py
apps/api/app/schemas/: domain.py
apps/api/app/services/: cache.py  repository.py  ruleset.py  scoring.py  seed_data.py  simulation.py  team_logic.py
apps/api/tests/: conftest.py  test_api.py  test_scoring.py  test_team_logic.py
docs/: f1-fantasy-2026-spec.md  mvp-build.md
docs/api/: mvp-api.md
